--- a/img.html
+++ b/img.html
@@ -2,7 +2,19 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css?">
+  <!--  <meta property="twitter:image" content="<URL-HERE>" /> -->
+  <!--  <meta name="twitter:image" content="https://cdn.prod.www.spiegel.de/images/6ce770e2-972e-4c8d-b570-3aa5ecc5e8cd_w1280_r1.77_fpx65.34_fpy50.jpg"> -->
+
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@flickr" />
+    <meta name="twitter:title" content="Small Island Developing States Photo Submission" />
+    <meta name="twitter:description" content="View the album on Flickr." />
+    <meta name="twitter:image" content="https://farm6.staticflickr.com/5510/14338202952_93595258ff_z.jpg" />
+
+
+
+    <link rel="stylesheet" href="styles.css">
     <title>Testseite</title>
 
 
