--- a/img.html
+++ b/img.html
@@ -8,9 +8,9 @@
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@flickr" />
-    <meta name="twitter:title" content="Small Island Developing States Photo Submission" />
-    <meta name="twitter:description" content="View the album on Flickr." />
-    <meta name="twitter:image" content="https://farm6.staticflickr.com/5510/14338202952_93595258ff_z.jpg" />
+    <meta name="twitter:title" content="Arbeiten auf dem Feld" />
+    <meta name="twitter:description" content="View more on Test" />
+    <meta name="twitter:image" content="https://www.oxfam.de/system/files/styles/desktop_10x_100_percent/private/ernaehrung-anbau-salat-75777.jpg" />
 
 
 
