--- a/img.html
+++ b/img.html
@@ -10,7 +10,7 @@
     <meta name="twitter:site" content="@flickr" />
     <meta name="twitter:title" content="Arbeiten auf dem Feld" />
     <meta name="twitter:description" content="View more on Test" />
-    <meta name="twitter:image" content="https://www.oxfam.de/system/files/styles/desktop_10x_100_percent/private/ernaehrung-anbau-salat-75777.jpg" />
+    <meta name="twitter:image" content="https://cdn.discordapp.com/attachments/827113407048056892/828970194873352263/placeholderSharepic.png" />
 
 
 
