--- a/img.html
+++ b/img.html
@@ -34,6 +34,16 @@
       <div class="test-test">
         <a href="#"><img class="smaller-image" src="https://cdn.discordapp.com/attachments/827113407048056892/828970194873352263/placeholderSharepic.png" alt="Theodor Fontana sagt das Birnen gesund sind."></a>
       </div>
+      
+      <!-- AddToAny BEGIN -->
+  <div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-url="https://camouflaged-penguin.github.io/proto/" data-a2a-title="Apfelschnappen">
+  <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
+  <a class="a2a_button_twitter"></a>
+  <a class="a2a_button_email"></a>
+  <a class="a2a_button_facebook"></a>
+  </div>
+  <script async src="https://static.addtoany.com/menu/page.js"></script>
+<!-- AddToAny END -->
 
       <div class="test-test">
         <p class="nomargin"><input type="button" onclick="window.location.href='index.html'" value="Zurück"></p>
