--- a/img.html
+++ b/img.html
@@ -8,7 +8,7 @@
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@flickr" />
-    <meta name="twitter:title" content="Arbeiten auf dem Feld" />
+    <meta name="twitter:title" content="https://camouflaged-penguin.github.io/proto/" />
     <meta name="twitter:description" content="View more on Test" />
     <meta name="twitter:image" content="https://cdn.discordapp.com/attachments/827113407048056892/828970194873352263/placeholderSharepic.png" />
 
