--- a/img.html
+++ b/img.html
@@ -68,7 +68,7 @@
 
 
       <div class="test-test nospace">
-        <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-text="Hier geht es zur Hauptseite" data-url="http://localhost/proto.01/img.html" data-hashtags="test-tweet" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-text="Hier geht es zur Hauptseite http://localhost/proto.01/img.html" data-url="https://cdn.discordapp.com/attachments/827113407048056892/828970194873352263/placeholderSharepic.png" data-hashtags="test-tweet" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div>
 
         <div class="fb-share-button" data-href="https://cdn.discordapp.com/attachments/827113407048056892/828970194873352263/placeholderSharepic.png" data-layout="button_count" data-size="small"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fcdn.discordapp.com%2Fattachments%2F827113407048056892%2F828970194873352263%2FplaceholderSharepic.png&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Teilen</a></div>
