--- a/img.html
+++ b/img.html
@@ -37,7 +37,7 @@
         <a href="#"><img class="smaller-image" src="https://cdn.discordapp.com/attachments/827113407048056892/828970194873352263/placeholderSharepic.png" alt="Theodor Fontana sagt das Birnen gesund sind."></a>
       </div>
       
-      <!-- AddToAny BEGIN -->
+      <!-- AddToAny BEGIN 
   <div class="a2a_kit a2a_kit_size_32 a2a_default_style test-test" data-a2a-url="https://camouflaged-penguin.github.io/proto/" data-a2a-title="Apfelschnappen">
   <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
   <a class="a2a_button_twitter"></a>
@@ -52,7 +52,7 @@
     <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
   </div>
   <script async src="https://static.addtoany.com/menu/page.js"></script>
-<!-- AddToAny END -->
+ AddToAny END -->
 
       <div class="test-test">
         <p class="nomargin"><input type="button" onclick="window.location.href='index.html'" value="Zurück"></p>
