--- a/game.html
+++ b/game.html
@@ -189,7 +189,7 @@
         player.setVelocityY(-330);
       }
       else if (cursors.up.isDown && endgame == 1)
-      {location.replace("game.html")}
+      {location.replace("img.html")}
       else if (cursors.up.isDown && share == 1)
       /* {location.assign("img.html")} */
       {location.replace("img.html")}
