--- a/img.html
+++ b/img.html
@@ -10,7 +10,8 @@
     <meta name="twitter:site" content="@flickr" />
     <meta name="twitter:title" content="Hier kommt der Titel hin" />
     <meta name="twitter:description" content="View more on Test" />
-    <meta name="twitter:image" content="https://cdn.discordapp.com/attachments/827113407048056892/828970194873352263/placeholderSharepic.png" />
+  <!-- <meta name="twitter:image" content="https://cdn.discordapp.com/attachments/827113407048056892/828970194873352263/placeholderSharepic.png" /> -->
+    <meta name="twitter:image" content="https://camouflaged-penguin.github.io/proto/assets/placeholderSharepic1.png" />
 
 
 
